syntax = "proto3";

//protoc  --go_out=./pkg  --go-grpc_out=./pkg api/auth.proto

option go_package = "./auth";

service AuthService {
  rpc Signup (SignupIn) returns (SignupOut) {};
  rpc Login (LoginIn) returns (LoginOut) {}; 
  rpc ChangePassword (ChangePasswordIn) returns (ChangePasswordOut) {}; 
}

message SignupIn {
  string username = 1;
  string password = 2;
  string confirm_password = 3;
}

message SignupOut {
  bool success = 1;
}

message LoginIn { 
  string username = 1;
  string password = 2;
}

message LoginOut { 
  bool success = 1;
}

message ChangePasswordIn {
  string username = 1;
  string password = 2;
  string new_password = 3;
}

message ChangePasswordOut {
  string response = 1;
}